infra/controllers/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  hostnames:
    - grafana.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-https
  namespace: monitoring
spec:
  hostnames:
    - grafana.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: alertmanager-http
  namespace: monitoring
spec:
  hostnames:
    - alerts.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: alertmanager-https
  namespace: monitoring
spec:
  hostnames:
    - alerts.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus-http
  namespace: monitoring
spec:
  hostnames:
    - prometheus.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus-https
  namespace: monitoring
spec:
  hostnames:
    - prometheus.burntbytes.com
  parentRefs:
    - name: app-gateway-production
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
